--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
       <artifactId>jcalendar</artifactId>
       <version>1.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.4.1</version>
+    </dependency>
 
   </dependencies>
 </project>
